--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "url": "https://github.com/adamhochberger/lol-wiki-bot/issues"
   },
   "dependencies": {
-    "cheerio": "1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.3",
     "discord.js": "12.3.1",
-    "fs": "0.0.1-security",
-    "got": "10.4.0"
+    "got": "^10.4.0",
+    "nodemon": "2.0.4"
   },
   "homepage": "https://github.com/adamhochberger/lol-wiki-bot#readme"
 }
