--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "12.3.1",
     "got": "^10.4.0",
-    "nodemon": "2.0.4"
+    "nodemon": "2.0.4",
+    "pm2": "4.4.1"
   },
   "homepage": "https://github.com/adamhochberger/lol-wiki-bot#readme"
 }
