Add item and abbreviations to config.json

--- a/config.json
+++ b/config.json
@@ -26,4 +26,77 @@
     "Veigar","Vel'Koz","Vi","Viktor","Vladimir","Volibear","Warwick", "Wukong",
     "Xayah","Xerath","Xin_Zhao","Yasuo","Yone","Yorick","Yuumi","Zac","Zed","Ziggs","Zilean","Zoe","Zyra"],
     
+    "item_names": ["'Your Cut'",  "Abyssal Mask", "Adaptive Helm", "Aegis of the Legion", "Aether Wisp",
+     "Amplifying Tome","Anti-tower Socks", "Archangel's Staff", "Archangel's Staff (Quick Charge)", "Ardent Censer",
+    "Athene's Unholy Grail", "B. F. Sword", "Bami's Cinder", "Banshee's Veil", "Berserker's Greaves", "Bilgewater Cutlass", 
+    "Black Cleaver", "Black Mist Scythe", "Black Spear", "Blade of the Ruined King", "Blasting Wand", "Bloodrazor",
+    "Bloodthirster", "Boots of Mobility", "Boots of Speed", "Boots of Swiftness", "Bramble Vest", "Bulwark of the Mountain",
+    "Catalyst of Aeons", "Caulfield's Warhammer", "Chain Vest", "Chalice of Harmony", "Cinderhulk", "Circlet of the Iron Solari",
+    "Cloak of Agility", "Cloth Armor", "Commencing Stopwatch", "Control Ward", "Corrupting Potion", "Crystalline Bracer", "Cull",
+    "Dagger", "Dark Seal", "Dead Man's Plate", "Death's Dance", "Death's Daughter", "Doran's Blade", "Doran's Ring", "Doran's Shield",
+    "Duskblade of Draktharr", "Edge of Night", "Elixir of Iron","Elixir of Sorcery","Elixir of Wrath","Essence Reaver",
+    "Executioner's Calling", "Eye of the Herald", "Faerie Charm", "Farsight Alteration", "Fiendish Codex", "Fire at Will", 
+    "Forbidden Idol", "Forgefire Cape", "Fortification", "Frostfang", "Frozen Fist", "Frozen Heart", "Frozen Mallet", "Gargoyle Stoneplate", 
+    "Giant's Belt", "Glacial Shroud", "Guardian's Hammer", "Guardian's Horn", "Guardian's Orb", "Guardian Angel", "Guinsoo's Rageblade", 
+    "Gusto", "Harrowing Crescent", "Haunting Guise", "Health Potion", "Hex Core mk-1", "Hex Core mk-2", "Hexdrinker", "Hextech GLP-800", 
+    "Hextech Gunblade", "Hextech Protobelt-01", "Hextech Revolver", "Hunter's Machete", "Hunter's Talisman", "Iceborn Gauntlet", "Infernal Mask", 
+    "Infinity Edge", "Ionian Boots of Lucidity", "Jaurim's Fist", "Kindlegem", "Kircheis Shard", "Knight's Vow", "Last Whisper", 
+    "Liandry's Torment", "Lich Bane", "Locket of the Iron Solari", "Long Sword", "Lord Dominik's Regards", "Lost Chapter", "Luden's Echo", 
+    "Luden's Pulse", "Manamune", "Manamune (Quick Charge)", "Maw of Malmortius", "Mejai's Soulstealer", "Mercurial Scimitar", 
+    "Mercury's Treads", "Might of the Ruined King", "Mikael's Crucible", "Minion Dematerializer", "Molten Edge", "Morellonomicon", 
+    "Mortal Reminder", "Muramana", "Nashor's Tooth", "Needlessly Large Rod", "Negatron Cloak", "Ninja Tabi", "Null-Magic Mantle", 
+    "Oblivion Orb", "Obsidian Cleaver", "Ohmwrecker (Turret Item)", "Oracle's Extract", "Oracle Lens", "Pauldrons of Whiterock", "Perfect Hex Core", 
+    "Perfectly Timed Stopwatch", "Phage", "Phantom Dancer", "Phreakish Gusto", "Pickaxe", "Poro-Snax", "Prototype Hex Core", "Quicksilver Sash", 
+    "Rabadon's Deathcap", "Rabadon's Deathcrown", "Raise Morale", "Randuin's Omen", "Rapid Firecannon", "Ravenous Hydra", "Recurve Bow", 
+    "Redemption", "Refillable Potion", "Reinforced Armor (Turret Item)", "Rejuvenation Bead", "Relic Shield", "Righteous Glory", "Rod of Ages", 
+    "Rod of Ages (Quick Charge)", "Ruby Crystal", "Runaan's Hurricane", "Runesteel Spaulders", "Runic Echoes", "Rylai's Crystal Scepter", 
+    "Salvation", "Sanguine Blade", "Sapphire Crystal", "Scarecrow Effigy", "Seeker's Armguard", "Seraph's Embrace", "Serrated Dirk", "Shard of True Ice", 
+    "Sheen", "Shurelya's Reverie", "Skirmisher's Sabre", "Slightly Magical Boots", "Sorcerer's Shoes", "Spectral Sickle", "Spectre's Cowl", 
+    "Spellbinder", "Spellthief's Edge", "Spirit Visage", "Stalker's Blade", "Statikk Shiv", "Steel Shoulderguards", "Sterak's Gage", "Stinger", 
+    "Stopwatch", "Stormrazor", "Sunfire Cape", "Super Mech Armor", "Super Mech Power Field", "Targon's Buckler", "Tear of the Goddess", "Tear of the Goddess (Quick Charge)", 
+    "Thornmail", "Tiamat", "Titanic Hydra", "Total Biscuit of Everlasting Will", "Trinity Force", "Trinity Fusion", "Turret Plating", 
+    "Twin Shadows", "Umbral Glaive", "Vampiric Scepter", "Void Staff", "Warden's Eye", "Warden's Mail", "Warding Totem", "Warmog's Armor", 
+    "Warrior", "Wit's End", "Youmuu's Ghostblade", "Youmuu's Wraithblade", "Zeal", "Zeke's Convergence", "Zhonya's Hourglass", "Zhonya's Paradox"], 
+
+    "abbreviations": {
+        "Yi": "Master_Yi",
+        "masteryi": "Master_Yi",
+        "lee": "Lee_Sin",
+        "leesin": "Lee_Sin",
+        "mf": "Miss_Fortune",
+        "missfortune": "Miss_Fortune",
+        "vlad": "Vladimir",
+        "blitz": "Blitzcrank",
+        "kench": "Tahm_Kench",
+        "trynd": "Tryndamere",
+        "ez": "Ezreal",
+        "cait": "Caitlyn",
+        "mundo": "Dr._Mundo",
+        "monkee": "Wukong",
+        "monkey": "Wukong",
+        "glp": "Hextech GLP-800",
+        "roa": "Rod of Ages",
+        "gunblade": "Hextech Gunblade",
+        "bf": "B. F. Sword",
+        "mobis": "Boots of Mobility",
+        "swiftys": "Boots of Swiftness",
+        "triforce": "Trinity Force",
+        "spectres": "Spectre's Cowl",
+        "abyssal": "Abyssal Helm",
+        "ie": "Infinity Edge",
+        "er": "Essence Reaver",
+        "banshees": "Banshee's Veil",
+        "cleaver": "Black Cleaver",
+        "bork": "Blade of the Ruined King",
+        "morello": "Morellonomic",
+        "liandrys": "Liandry's Torment",
+        "zhonyas": "Zhonya's Hourglass",
+        "youmuus": "Youmuu's Ghostblade",
+        "warmogs": "Warmog's Armor",
+        "seraphs": "Seraph's Embrace",
+        "runaans": "Runaan's Hurricane",
+        "rylais": "Rylai's Crystal Scepter",
+        "shiv": "Statikk Shiv",
+        "pd": "Phantom Dancer"
+    },
 }
