Add underscores to dictionary of names

--- a/config.json
+++ b/config.json
@@ -1,9 +1,4 @@
 {
-    "attribute_names" : ["Health", "ResourceBar", "HealthRegen", "ResourceRegen", 
-    "Armor", "AttackDamage", "MagicResist", "CriticalDamage", "MovementSpeed", "AttackRange",
-    "Attack Speed", "Windup", "AS ratio", "AttackSpeedBonus","Gameplay Radius", 
-    "Selection Radius", "Pathing Radius", "Auto Radius"],
-    
     "champ_names" : ["Aatrox","Ahri","Akali","Alistar","Amumu",
     "Anivia","Annie","Aphelios","Ashe","Aurelion_Sol","Azir","Bard",
     "Blitzcrank","Brand","Braum","Caitlyn","Camille","Cassiopeia",
@@ -12,8 +7,8 @@
     "Gangplank","Garen","Gnar","Gragas","Graves","Hecarim",
     "Heimerdinger","Illaoi","Irelia","Ivern","Janna","JarvanIV",
     "Jax","Jayce","Jhin","Jinx","Kai'Sa","Kalista","Karma","Karthus",
-    "Kassadin","Katarina","Kayle","Kayn","Kennen","Kha'zix","Kindred",
-    "Kled","KogMaw","Leblanc","Lee_Sin","Leona","Lillia","Lissandra",
+    "Kassadin","Katarina","Kayle","Kayn","Kennen","Kha'Zix","Kindred",
+    "Kled","Kog'Maw","Leblanc","Lee_Sin","Leona","Lillia","Lissandra",
     "Lucian","Lulu","Lux","Malphite","Malzahar","Maokai","MasterYi",
     "Miss_Fortune","Mordekaiser","Morgana","Nami","Nasus",
     "Nautilus","Neeko","Nidalee","Nocturne","Nunu","Olaf","Orianna",
@@ -26,37 +21,37 @@
     "Veigar","Vel'Koz","Vi","Viktor","Vladimir","Volibear","Warwick", "Wukong",
     "Xayah","Xerath","Xin_Zhao","Yasuo","Yone","Yorick","Yuumi","Zac","Zed","Ziggs","Zilean","Zoe","Zyra"],
     
-    "item_names": ["'Your Cut'",  "Abyssal Mask", "Adaptive Helm", "Aegis of the Legion", "Aether Wisp",
-     "Amplifying Tome","Anti-tower Socks", "Archangel's Staff", "Archangel's Staff (Quick Charge)", "Ardent Censer",
-    "Athene's Unholy Grail", "B. F. Sword", "Bami's Cinder", "Banshee's Veil", "Berserker's Greaves", "Bilgewater Cutlass", 
-    "Black Cleaver", "Black Mist Scythe", "Black Spear", "Blade of the Ruined King", "Blasting Wand", "Bloodrazor",
-    "Bloodthirster", "Boots of Mobility", "Boots of Speed", "Boots of Swiftness", "Bramble Vest", "Bulwark of the Mountain",
-    "Catalyst of Aeons", "Caulfield's Warhammer", "Chain Vest", "Chalice of Harmony", "Cinderhulk", "Circlet of the Iron Solari",
-    "Cloak of Agility", "Cloth Armor", "Commencing Stopwatch", "Control Ward", "Corrupting Potion", "Crystalline Bracer", "Cull",
-    "Dagger", "Dark Seal", "Dead Man's Plate", "Death's Dance", "Death's Daughter", "Doran's Blade", "Doran's Ring", "Doran's Shield",
-    "Duskblade of Draktharr", "Edge of Night", "Elixir of Iron","Elixir of Sorcery","Elixir of Wrath","Essence Reaver",
-    "Executioner's Calling", "Eye of the Herald", "Faerie Charm", "Farsight Alteration", "Fiendish Codex", "Fire at Will", 
-    "Forbidden Idol", "Forgefire Cape", "Fortification", "Frostfang", "Frozen Fist", "Frozen Heart", "Frozen Mallet", "Gargoyle Stoneplate", 
-    "Giant's Belt", "Glacial Shroud", "Guardian's Hammer", "Guardian's Horn", "Guardian's Orb", "Guardian Angel", "Guinsoo's Rageblade", 
-    "Gusto", "Harrowing Crescent", "Haunting Guise", "Health Potion", "Hex Core mk-1", "Hex Core mk-2", "Hexdrinker", "Hextech GLP-800", 
-    "Hextech Gunblade", "Hextech Protobelt-01", "Hextech Revolver", "Hunter's Machete", "Hunter's Talisman", "Iceborn Gauntlet", "Infernal Mask", 
-    "Infinity Edge", "Ionian Boots of Lucidity", "Jaurim's Fist", "Kindlegem", "Kircheis Shard", "Knight's Vow", "Last Whisper", 
-    "Liandry's Torment", "Lich Bane", "Locket of the Iron Solari", "Long Sword", "Lord Dominik's Regards", "Lost Chapter", "Luden's Echo", 
-    "Luden's Pulse", "Manamune", "Manamune (Quick Charge)", "Maw of Malmortius", "Mejai's Soulstealer", "Mercurial Scimitar", 
-    "Mercury's Treads", "Might of the Ruined King", "Mikael's Crucible", "Minion Dematerializer", "Molten Edge", "Morellonomicon", 
-    "Mortal Reminder", "Muramana", "Nashor's Tooth", "Needlessly Large Rod", "Negatron Cloak", "Ninja Tabi", "Null-Magic Mantle", 
-    "Oblivion Orb", "Obsidian Cleaver", "Ohmwrecker (Turret Item)", "Oracle's Extract", "Oracle Lens", "Pauldrons of Whiterock", "Perfect Hex Core", 
-    "Perfectly Timed Stopwatch", "Phage", "Phantom Dancer", "Phreakish Gusto", "Pickaxe", "Poro-Snax", "Prototype Hex Core", "Quicksilver Sash", 
-    "Rabadon's Deathcap", "Rabadon's Deathcrown", "Raise Morale", "Randuin's Omen", "Rapid Firecannon", "Ravenous Hydra", "Recurve Bow", 
-    "Redemption", "Refillable Potion", "Reinforced Armor (Turret Item)", "Rejuvenation Bead", "Relic Shield", "Righteous Glory", "Rod of Ages", 
-    "Rod of Ages (Quick Charge)", "Ruby Crystal", "Runaan's Hurricane", "Runesteel Spaulders", "Runic Echoes", "Rylai's Crystal Scepter", 
-    "Salvation", "Sanguine Blade", "Sapphire Crystal", "Scarecrow Effigy", "Seeker's Armguard", "Seraph's Embrace", "Serrated Dirk", "Shard of True Ice", 
-    "Sheen", "Shurelya's Reverie", "Skirmisher's Sabre", "Slightly Magical Boots", "Sorcerer's Shoes", "Spectral Sickle", "Spectre's Cowl", 
-    "Spellbinder", "Spellthief's Edge", "Spirit Visage", "Stalker's Blade", "Statikk Shiv", "Steel Shoulderguards", "Sterak's Gage", "Stinger", 
-    "Stopwatch", "Stormrazor", "Sunfire Cape", "Super Mech Armor", "Super Mech Power Field", "Targon's Buckler", "Tear of the Goddess", "Tear of the Goddess (Quick Charge)", 
-    "Thornmail", "Tiamat", "Titanic Hydra", "Total Biscuit of Everlasting Will", "Trinity Force", "Trinity Fusion", "Turret Plating", 
-    "Twin Shadows", "Umbral Glaive", "Vampiric Scepter", "Void Staff", "Warden's Eye", "Warden's Mail", "Warding Totem", "Warmog's Armor", 
-    "Warrior", "Wit's End", "Youmuu's Ghostblade", "Youmuu's Wraithblade", "Zeal", "Zeke's Convergence", "Zhonya's Hourglass", "Zhonya's Paradox"], 
+    "item_names": ["'Your_Cut'",  "Abyssal_Mask", "Adaptive_Helm", "Aegis_of_the_Legion", "Aether_Wisp",
+     "Amplifying_Tome","Anti-tower_Socks", "Archangel's_Staff", "Archangel's_Staff_(Quick_Charge)", "Ardent_Censer",
+    "Athene's_Unholy_Grail", "B. F. Sword", "Bami's_Cinder", "Banshee's_Veil", "Berserker's_Greaves", "Bilgewater_Cutlass", 
+    "Black_Cleaver", "Black_Mist_Scythe", "Black_Spear", "Blade_of_the_Ruined_King", "Blasting_Wand", "Bloodrazor",
+    "Bloodthirster", "Boots_of_Mobility", "Boots_of_Speed", "Boots_of_Swiftness", "Bramble_Vest", "Bulwark_of_the_Mountain",
+    "Catalyst_of_Aeons", "Caulfield's_Warhammer", "Chain_Vest", "Chalice_of_Harmony", "Cinderhulk", "Circlet_of_the_Iron_Solari",
+    "Cloak_of_Agility", "Cloth_Armor", "Commencing_Stopwatch", "Control_Ward", "Corrupting_Potion", "Crystalline_Bracer", "Cull",
+    "Dagger", "Dark_Seal", "Dead_Man's_Plate", "Death's_Dance", "Death's_Daughter", "Doran's_Blade", "Doran's_Ring", "Doran's_Shield",
+    "Duskblade_of_Draktharr", "Edge_of_Night", "Elixir_of_Iron","Elixir_of_Sorcery","Elixir_of_Wrath","Essence_Reaver",
+    "Executioner's_Calling", "Eye_of_the_Herald", "Faerie_Charm", "Farsight_Alteration", "Fiendish_Codex", "Fire_at_Will", 
+    "Forbidden_Idol", "Forgefire_Cape", "Fortification", "Frostfang", "Frozen_Fist", "Frozen_Heart", "Frozen_Mallet", "Gargoyle_Stoneplate", 
+    "Giant's_Belt", "Glacial_Shroud", "Guardian's_Hammer", "Guardian's_Horn", "Guardian's_Orb", "Guardian_Angel", "Guinsoo's_Rageblade", 
+    "Gusto", "Harrowing_Crescent", "Haunting_Guise", "Health_Potion", "Hex_Core_mk-1", "Hex_Core_mk-2", "Hexdrinker", "Hextech_GLP-800", 
+    "Hextech_Gunblade", "Hextech_Protobelt-01", "Hextech_Revolver", "Hunter's_Machete", "Hunter's_Talisman", "Iceborn_Gauntlet", "Infernal_Mask", 
+    "Infinity_Edge", "Ionian_Boots_of_Lucidity", "Jaurim's_Fist", "Kindlegem", "Kircheis_Shard", "Knight's_Vow", "Last_Whisper", 
+    "Liandry's_Torment", "Lich_Bane", "Locket_of_the_Iron_Solari", "Long_Sword", "Lord_Dominik's_Regards", "Lost_Chapter", "Luden's_Echo", 
+    "Luden's_Pulse", "Manamune", "Manamune_(Quick_Charge)", "Maw_of_Malmortius", "Mejai's_Soulstealer", "Mercurial_Scimitar", 
+    "Mercury's_Treads", "Might_of_the_Ruined_King", "Mikael's_Crucible", "Minion_Dematerializer", "Molten_Edge", "Morellonomicon", 
+    "Mortal_Reminder", "Muramana", "Nashor's_Tooth", "Needlessly_Large_Rod", "Negatron_Cloak", "Ninja_Tabi", "Null-Magic_Mantle", 
+    "Oblivion_Orb", "Obsidian_Cleaver", "Ohmwrecker_(Turret_Item)", "Oracle's_Extract", "Oracle_Lens", "Pauldrons_of_Whiterock", "Perfect_Hex_Core", 
+    "Perfectly_Timed_Stopwatch", "Phage", "Phantom_Dancer", "Phreakish_Gusto", "Pickaxe", "Poro-Snax", "Prototype_Hex_Core", "Quicksilver_Sash", 
+    "Rabadon's_Deathcap", "Rabadon's_Deathcrown", "Raise_Morale", "Randuin's_Omen", "Rapid_Firecannon", "Ravenous_Hydra", "Recurve_Bow", 
+    "Redemption", "Refillable_Potion", "Reinforced_Armor_(Turret_Item)", "Rejuvenation_Bead", "Relic_Shield", "Righteous_Glory", "Rod_of_Ages", 
+    "Rod_of_Ages_(Quick_Charge)", "Ruby_Crystal", "Runaan's_Hurricane", "Runesteel_Spaulders", "Runic_Echoes", "Rylai's_Crystal_Scepter", 
+    "Salvation", "Sanguine_Blade", "Sapphire_Crystal", "Scarecrow_Effigy", "Seeker's_Armguard", "Seraph's_Embrace", "Serrated_Dirk", "Shard_of_True_Ice", 
+    "Sheen", "Shurelya's_Reverie", "Skirmisher's_Sabre", "Slightly_Magical_Boots", "Sorcerer's_Shoes", "Spectral_Sickle", "Spectre's_Cowl", 
+    "Spellbinder", "Spellthief's_Edge", "Spirit_Visage", "Stalker's_Blade", "Statikk_Shiv", "Steel_Shoulderguards", "Sterak's_Gage", "Stinger", 
+    "Stopwatch", "Stormrazor", "Sunfire_Cape", "Super_Mech_Armor", "Super_Mech_Power_Field", "Targon's_Buckler", "Tear_of_the_Goddess", "Tear_of_the_Goddess_(Quick_Charge)", 
+    "Thornmail", "Tiamat", "Titanic_Hydra", "Total_Biscuit_of_Everlasting_Will", "Trinity_Force", "Trinity_Fusion", "Turret_Plating", 
+    "Twin_Shadows", "Umbral_Glaive", "Vampiric_Scepter", "Void_Staff", "Warden's_Eye", "Warden's_Mail", "Warding_Totem", "Warmog's_Armor", 
+    "Warrior", "Wit's_End", "Youmuu's_Ghostblade", "Youmuu's_Wraithblade", "Zeal", "Zeke's_Convergence", "Zhonya's_Hourglass", "Zhonya's_Paradox"], 
 
     "abbreviations": {
         "Yi": "Master_Yi",
@@ -74,29 +69,29 @@
         "mundo": "Dr._Mundo",
         "monkee": "Wukong",
         "monkey": "Wukong",
-        "glp": "Hextech GLP-800",
-        "roa": "Rod of Ages",
-        "gunblade": "Hextech Gunblade",
+        "glp": "Hextech_GLP-800",
+        "roa": "Rod_of_Ages",
+        "gunblade": "Hextech_Gunblade",
         "bf": "B. F. Sword",
-        "mobis": "Boots of Mobility",
-        "swiftys": "Boots of Swiftness",
-        "triforce": "Trinity Force",
-        "spectres": "Spectre's Cowl",
-        "abyssal": "Abyssal Helm",
-        "ie": "Infinity Edge",
-        "er": "Essence Reaver",
-        "banshees": "Banshee's Veil",
-        "cleaver": "Black Cleaver",
-        "bork": "Blade of the Ruined King",
+        "mobis": "Boots_of_Mobility",
+        "swiftys": "Boots_of_Swiftness",
+        "triforce": "Trinity_Force",
+        "spectres": "Spectre's_Cowl",
+        "abyssal": "Abyssal_Helm",
+        "ie": "Infinity_Edge",
+        "er": "Essence_Reaver",
+        "banshees": "Banshee's_Veil",
+        "cleaver": "Black_Cleaver",
+        "bork": "Blade_of_the_Ruined_King",
         "morello": "Morellonomic",
-        "liandrys": "Liandry's Torment",
-        "zhonyas": "Zhonya's Hourglass",
-        "youmuus": "Youmuu's Ghostblade",
-        "warmogs": "Warmog's Armor",
-        "seraphs": "Seraph's Embrace",
-        "runaans": "Runaan's Hurricane",
-        "rylais": "Rylai's Crystal Scepter",
-        "shiv": "Statikk Shiv",
-        "pd": "Phantom Dancer"
+        "liandrys": "Liandry's_Torment",
+        "zhonyas": "Zhonya's_Hourglass",
+        "youmuus": "Youmuu's_Ghostblade",
+        "warmogs": "Warmog's_Armor",
+        "seraphs": "Seraph's_Embrace",
+        "runaans": "Runaan's_Hurricane",
+        "rylais": "Rylai's_Crystal_Scepter",
+        "shiv": "Statikk_Shiv",
+        "pd": "Phantom_Dancer"
     },
 }
