Fix LeBlanc spelling

--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
     "Heimerdinger","Illaoi","Irelia","Ivern","Janna","JarvanIV",
     "Jax","Jayce","Jhin","Jinx","Kai'Sa","Kalista","Karma","Karthus",
     "Kassadin","Katarina","Kayle","Kayn","Kennen","Kha'zix","Kindred",
-    "Kled","KogMaw","Leblanc","Lee_Sin","Leona","Lillia","Lissandra",
+    "Kled","KogMaw","LeBlanc","Lee_Sin","Leona","Lillia","Lissandra",
     "Lucian","Lulu","Lux","Malphite","Malzahar","Maokai","MasterYi",
     "Miss_Fortune","Mordekaiser","Morgana","Nami","Nasus",
     "Nautilus","Neeko","Nidalee","Nocturne","Nunu","Olaf","Orianna",
