Fix item spellings

--- a/config.json
+++ b/config.json
@@ -74,7 +74,7 @@
         "glp": "Hextech_GLP-800",
         "roa": "Rod_of_Ages",
         "gunblade": "Hextech_Gunblade",
-        "bf": "B. F. Sword",
+        "bf": "B._F._Sword",
         "mobis": "Boots_of_Mobility",
         "swiftys": "Boots_of_Swiftness",
         "triforce": "Trinity_Force",
@@ -85,7 +85,7 @@
         "banshees": "Banshee's_Veil",
         "cleaver": "Black_Cleaver",
         "bork": "Blade_of_the_Ruined_King",
-        "morello": "Morellonomic",
+        "morello": "Morellonomicon",
         "liandrys": "Liandry's_Torment",
         "zhonyas": "Zhonya's_Hourglass",
         "youmuus": "Youmuu's_Ghostblade",
