Add Samira to champion list

--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
     "Miss_Fortune","Mordekaiser","Morgana","Nami","Nasus",
     "Nautilus","Neeko","Nidalee","Nocturne","Nunu","Olaf","Orianna",
     "Ornn","Pantheon","Poppy","Pyke","Qiyana","Quinn","Rakan","Rammus",
-    "Rek'Sai","Renekton","Rengar","Riven","Rumble","Ryze","Sejuani",
+    "Rek'Sai","Renekton","Rengar","Riven","Rumble","Ryze","Samira", "Sejuani",
     "Senna","Sett","Shaco","Shen","Shyvana","Singed","Sion","Sivir",
     "Skarner","Sona","Soraka","Swain","Sylas","Syndra","Tahm_Kench",
     "Taliyah","Talon","Taric","Teemo","Thresh","Tristana","Trundle",
