--- a/config.json
+++ b/config.json
@@ -21,37 +21,47 @@
     "Veigar","Vel'Koz","Vi","Viktor","Vladimir","Volibear","Warwick", "Wukong",
     "Xayah","Xerath","Xin_Zhao","Yasuo","Yone","Yorick","Yuumi","Zac","Zed","Ziggs","Zilean","Zoe","Zyra"],
     
-    "items": ["'Your_Cut'",  "Abyssal_Mask", "Adaptive_Helm", "Aegis_of_the_Legion", "Aether_Wisp",
-     "Amplifying_Tome","Anti-tower_Socks", "Archangel's_Staff", "Archangel's_Staff_(Quick_Charge)", "Ardent_Censer",
-    "Athene's_Unholy_Grail", "B._F._Sword", "Bami's_Cinder", "Banshee's_Veil", "Berserker's_Greaves", "Bilgewater_Cutlass", 
-    "Black_Cleaver", "Black_Mist_Scythe", "Black_Spear", "Blade_of_the_Ruined_King", "Blasting_Wand", "Bloodrazor",
-    "Bloodthirster", "Boots_of_Mobility", "Boots_of_Speed", "Boots_of_Swiftness", "Bramble_Vest", "Bulwark_of_the_Mountain",
-    "Catalyst_of_Aeons", "Caulfield's_Warhammer", "Chain_Vest", "Chalice_of_Harmony", "Cinderhulk", "Circlet_of_the_Iron_Solari",
-    "Cloak_of_Agility", "Cloth_Armor", "Commencing_Stopwatch", "Control_Ward", "Corrupting_Potion", "Crystalline_Bracer", "Cull",
-    "Dagger", "Dark_Seal", "Dead_Man's_Plate", "Death's_Dance", "Death's_Daughter", "Doran's_Blade", "Doran's_Ring", "Doran's_Shield",
-    "Duskblade_of_Draktharr", "Edge_of_Night", "Elixir_of_Iron","Elixir_of_Sorcery","Elixir_of_Wrath","Essence_Reaver",
-    "Executioner's_Calling", "Eye_of_the_Herald", "Faerie_Charm", "Farsight_Alteration", "Fiendish_Codex", "Fire_at_Will", 
-    "Forbidden_Idol", "Forgefire_Cape", "Fortification", "Frostfang", "Frozen_Fist", "Frozen_Heart", "Frozen_Mallet", "Gargoyle_Stoneplate", 
-    "Giant's_Belt", "Glacial_Shroud", "Guardian's_Hammer", "Guardian's_Horn", "Guardian's_Orb", "Guardian_Angel", "Guinsoo's_Rageblade", 
-    "Gusto", "Harrowing_Crescent", "Haunting_Guise", "Health_Potion", "Hex_Core_mk-1", "Hex_Core_mk-2", "Hexdrinker", "Hextech_GLP-800", 
-    "Hextech_Gunblade", "Hextech_Protobelt-01", "Hextech_Revolver", "Hunter's_Machete", "Hunter's_Talisman", "Iceborn_Gauntlet", "Infernal_Mask", 
-    "Infinity_Edge", "Ionian_Boots_of_Lucidity", "Jaurim's_Fist", "Kindlegem", "Kircheis_Shard", "Knight's_Vow", "Last_Whisper", 
-    "Liandry's_Torment", "Lich_Bane", "Locket_of_the_Iron_Solari", "Long_Sword", "Lord_Dominik's_Regards", "Lost_Chapter", "Luden's_Echo", 
-    "Luden's_Pulse", "Manamune", "Manamune_(Quick_Charge)", "Maw_of_Malmortius", "Mejai's_Soulstealer", "Mercurial_Scimitar", 
-    "Mercury's_Treads", "Might_of_the_Ruined_King", "Mikael's_Crucible", "Minion_Dematerializer", "Molten_Edge", "Morellonomicon", 
-    "Mortal_Reminder", "Muramana", "Nashor's_Tooth", "Needlessly_Large_Rod", "Negatron_Cloak", "Ninja_Tabi", "Null-Magic_Mantle", 
-    "Oblivion_Orb", "Obsidian_Cleaver", "Ohmwrecker_(Turret_Item)", "Oracle's_Extract", "Oracle_Lens", "Pauldrons_of_Whiterock", "Perfect_Hex_Core", 
-    "Perfectly_Timed_Stopwatch", "Phage", "Phantom_Dancer", "Phreakish_Gusto", "Pickaxe", "Poro-Snax", "Prototype_Hex_Core", "Quicksilver_Sash", 
-    "Rabadon's_Deathcap", "Rabadon's_Deathcrown", "Raise_Morale", "Randuin's_Omen", "Rapid_Firecannon", "Ravenous_Hydra", "Recurve_Bow", 
-    "Redemption", "Refillable_Potion", "Reinforced_Armor_(Turret_Item)", "Rejuvenation_Bead", "Relic_Shield", "Righteous_Glory", "Rod_of_Ages", 
-    "Rod_of_Ages_(Quick_Charge)", "Ruby_Crystal", "Runaan's_Hurricane", "Runesteel_Spaulders", "Runic_Echoes", "Rylai's_Crystal_Scepter", 
-    "Salvation", "Sanguine_Blade", "Sapphire_Crystal", "Scarecrow_Effigy", "Seeker's_Armguard", "Seraph's_Embrace", "Serrated_Dirk", "Shard_of_True_Ice", 
-    "Sheen", "Shurelya's_Reverie", "Skirmisher's_Sabre", "Slightly_Magical_Boots", "Sorcerer's_Shoes", "Spectral_Sickle", "Spectre's_Cowl", 
-    "Spellbinder", "Spellthief's_Edge", "Spirit_Visage", "Stalker's_Blade", "Statikk_Shiv", "Steel_Shoulderguards", "Sterak's_Gage", "Stinger", 
-    "Stopwatch", "Stormrazor", "Sunfire_Cape", "Super_Mech_Armor", "Super_Mech_Power_Field", "Targon's_Buckler", "Tear_of_the_Goddess", "Tear_of_the_Goddess_(Quick_Charge)", 
-    "Thornmail", "Tiamat", "Titanic_Hydra", "Total_Biscuit_of_Everlasting_Will", "Trinity_Force", "Trinity_Fusion", "Turret_Plating", 
-    "Twin_Shadows", "Umbral_Glaive", "Vampiric_Scepter", "Void_Staff", "Warden's_Eye", "Warden's_Mail", "Warding_Totem", "Warmog's_Armor", 
-    "Warrior", "Wit's_End", "Youmuu's_Ghostblade", "Youmuu's_Wraithblade", "Zeal", "Zeke's_Convergence", "Zhonya's_Hourglass", "Zhonya's_Paradox"], 
+    "items": [ "'Your_Cut'", "Abyssal_Mask", "Aegis_of_the_Legion", "Aether_Wisp", "Amplifying_Tome",
+        "Archangel's_Staff", "Ardent_Censer", "B._F._Sword", "Bami's_Cinder", "Bandleglass_Mirror",
+        "Banshee's_Veil", "Berserker's_Greaves", "Black_Cleaver", "Black_Mist_Scythe", "Black_Spear",
+        "Blade_of_the_Ruined_King", "Blasting_Wand", "Blighting_Jewel", "Bloodthirster", "Boots",
+        "Boots_of_Swiftness", "Bramble_Vest", "Bulwark_of_the_Mountain", "Caulfield's_Warhammer",
+        "Caulfield's_Warhammer", "Caulfield's_Warhammer", "Chain_Vest", "Chempunk_Chainsword",
+        "Chemtech_Putrifier", "Cloak_of_Agility", "Cloth_Armor", "Commencing_Stopwatch","Control_Ward",
+        "Corrupting_Potion", "Corrupting_Potion", "Cosmic_Drive", "Crystalline_Bracer", "Cull",
+        "Dagger", "Dark_Seal", "Dead_Man's_Plate", "Death's_Dance", "Demonic_Embrace", "Divine_Sunderer",
+        "Doran's_Blade", "Doran's_Ring", "Doran's_Shield", "Duskblade_of_Draktharr", "Eclipse",
+        "Edge_of_Night", "Elixir_of_Iron", "Elixir_of_Sorcery", "Elixir_of_Wrath", "Emberknife",
+        "Essence_Reaver", "Everfrost", "Executioner's_Calling", "Eye_of_the_Herald", "Faerie_Charm",
+        "Farsight_Alteration", "Fiendish_Codex", "Fiendish_Codex", "Forbidden_Idol", "Force_of_Nature",
+        "Frostfang", "Frostfire_Gauntlet", "Frozen_Heart", "Galeforce", "Gargoyle_Stoneplate",
+        "Giant's_Belt", "Glacial_Buckler", "Goredrinker", "Guardian's_Blade", "Guardian's_Hammer",
+        "Guardian's_Horn", "Guardian's_Orb", "Guardian_Angel", "Guinsoo's_Rageblade", "Hailblade",
+        "Harrowing_Crescent", "Health_Potion", "Hearthbound_Axe", "Hexdrinker", "Hextech_Alternator",
+        "Hextech_Rocketbelt", "Horizon_Focus", "Immortal_Shieldbow", "Imperial_Mandate",
+        "Infinity_Edge", "Ionian_Boots_of_Lucidity", "Ironspike_Whip", "Kindlegem", "Kircheis_Shard",
+        "Knight's_Vow", "Kraken_Slayer", "Last_Whisper", "Leeching_Leer", "Liandry's_Anguish",
+        "Lich_Bane", "Locket_of_the_Iron_Solari", "Long_Sword", "Lord_Dominik's_Regards",
+        "Lost_Chapter", "Luden's_Tempest", "Manamune", "Maw_of_Malmortius", "Mejai's_Soulstealer",
+        "Mercurial_Scimitar", "Mercury's_Treads", "Mikael's_Blessing", "Minion_Dematerializer",
+        "Mobility_Boots", "Moonstone_Renewer", "Morellonomicon", "Mortal_Reminder", "Muramana",
+        "Nashor's_Tooth", "Navori_Quickblades", "Needlessly_Large_Rod", "Negatron_Cloak",
+        "Night_Harvester", "Noonquiver", "Null-Magic_Mantle", "Oblivion_Orb", "Oracle_Lens",
+        "Pauldrons_of_Whiterock", "Perfectly_Timed_Stopwatch", "Phage", "Phantom_Dancer",
+        "Pickaxe", "Plated_Steelcaps", "Poro-Snax", "Prowler's_Claw", "Quicksilver_Sash",
+        "Rabadon's_Deathcap", "Rageknife", "Randuin's_Omen", "Rapid_Firecannon", "Ravenous_Hydra",
+        "Recurve_Bow", "Redemption", "Refillable_Potion", "Rejuvenation_Bead", "Relic_Shield",
+        "Riftmaker", "Ruby_Crystal", "Runaan's_Hurricane", "Runesteel_Spaulders", "Rylai's_Crystal_Scepter",
+        "Sanguine_Blade", "Sapphire_Crystal", "Scarecrow_Effigy", "Seeker's_Armguard", "Seraph's_Embrace",
+        "Serpent's_Fang", "Serrated_Dirk", "Serylda's_Grudge", "Shard_of_True_Ice", "Sheen",
+        "Shurelya's_Battlesong", "Silvermere_Dawn", "Slightly_Magical_Boots", "Sorcerer's_Shoes",
+        "Spectral_Sickle", "Spectre's_Cowl", "Spellthief's_Edge", "Spirit_Visage", "Staff_of_Flowing_Water",
+        "Stealth_Ward", "Steel_Shoulderguards", "Sterak's_Gage", "Stirring_Wardstone", "Stopwatch",
+        "Stormrazor", "Stridebreaker", "Sunfire_Aegis", "Targon's_Buckler", "Tear_of_the_Goddess",
+        "The_Collector", "Thornmail", "Tiamat", "Titanic_Hydra", "Total_Biscuit_of_Everlasting_Will",
+        "Trinity_Force", "Turbo_Chemtank", "Umbral_Glaive", "Vampiric_Scepter", "Verdant_Barrier",
+        "Vigilant_Wardstone", "Void_Staff", "Warden's_Mail", "Warmog's_Armor", "Watchful_Wardstone",
+        "Winged_Moonplate", "Wit's_End", "Youmuu's_Ghostblade", "Zeal", "Zeke's_Convergence", "Zhonya's_Hourglass"], 
 
     "abbreviations": {
         "Yi": "Master_Yi",
